SERVER-20655: truncate oplog when recovering from failed batch