src/mongo/db/repl/sync_tail.cpp
@@ -46,6 +46,7 @@
 #include "mongo/db/commands/fsync.h"
 #include "mongo/db/commands/server_status_metric.h"
 #include "mongo/db/concurrency/write_conflict_exception.h"
+#include "mongo/db/dbhelpers.h"
 #include "mongo/db/curop.h"
 #include "mongo/db/db_raii.h"
 #include "mongo/db/global_timestamp.h"
@@ -127,6 +128,25 @@ bool isCrudOpType(const char* field) {
             return field[1] == 0;
     }
     return false;
+}
+
+void truncateOplogTo(OperationContext* txn, Timestamp truncateTimestamp) {
+    const NamespaceString oplogNss(rsOplogName);
+    ScopedTransaction transaction(txn, MODE_IX);
+    Lock::DBLock oplogDbLock(txn->lockState(), oplogNss.db(), MODE_IX);
+    Lock::CollectionLock oplogCollectionLoc(txn->lockState(), oplogNss.ns(), MODE_X);
+    OldClientContext ctx(txn, rsOplogName);
+    Collection* oplogCollection = ctx.db()->getCollection(rsOplogName);
+    if (!oplogCollection) {
+        fassertFailedWithStatusNoTrace(
+            28820,
+            Status(ErrorCodes::NamespaceNotFound, str::stream() << "Can't find " << rsOplogName));
+    }
+
+    RecordId loc = Helpers::findOne(txn, oplogCollection, BSON("ts" << truncateTimestamp), false);
+    if (!loc.isNull()) {
+        oplogCollection->temp_cappedTruncateAfter(txn, loc, false);
+    }
 }
 }
 
@@ -521,7 +541,14 @@ void SyncTail::oplogApplication() {
     ReplicationCoordinator* replCoord = getGlobalReplicationCoordinator();
 
     OperationContextImpl txn;
-    OpTime originalEndOpTime(getMinValid(&txn).end);
+    auto mv = getMinValid(&txn);
+    OpTime originalEndOpTime(mv.end);
+
+    if (!mv.start.isNull()) {
+        // We are recovering from a failed batch apply, so truncate the oplog back to 'start'.
+        truncateOplogTo(&txn, mv.start.getTimestamp());
+    }
+
     while (!inShutdown()) {
         OpQueue ops;
 
@@ -593,7 +620,8 @@ void SyncTail::oplogApplication() {
         const BSONObj lastOp = ops.back();
         handleSlaveDelay(lastOp);
 
-        // Set minValid to the last OpTime to be applied in this batch.
+        // Set minValid to the last OpTime that needs to be applied, in this batch or fram the
+        // (last) failed batch, whichever is larger.
         // This will cause this node to go into RECOVERING state
         // if we should crash and restart before updating finishing.
         const OpTime start(getLastSetTimestamp(), OpTime::kUninitializedTerm);
